--- a/src/template.html
+++ b/src/template.html
@@ -8,16 +8,16 @@
 <body>
     <header>
         <nav>
-            <button id="home"></button>
-            <button id="menu"></button>
-            <button id="about"></button>
+            <button id="home">Home</button>
+            <button id="menu"> Menu</button>
+            <button id="contact">Contact Us</button>
         </nav>
     </header>
 
 
     <div id="content">
 
-        
+
     </div>
 </body>
 </html>
